[build-system]
requires = ["setuptools >= 46.4.0", "wheel", "versioneer-518"]

# uncomment to enable pep517 after versioneer problem is fixed.
# https://github.com/python-versioneer/python-versioneer/issues/193
#build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
# This is required for non-re-entrant tests in ``pds-doi-service``:
numprocesses = 1
