[build-system]
requires = ["setuptools >= 46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
# This is required for non-re-entrant tests in ``pds-doi-service``:
numprocesses = 1
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:pytz",
    "ignore::UserWarning:jsonschema",
]
