[metadata]
name = pds-doi-service
version = file: src/pds_doi_service/VERSION.txt
author = PDS
author_email = pds_operator@jpl.nasa.gov
description = Digital Object Identifier service for the Planetary Data System
long_description = file: README.md
long_description_content_type = text/markdown
license = apache-2.0
keywords = pds, doi, osti, dataCite
url = https://github.com/NASA-PDS/pds-doi-service
download_url = https://github.com/NASA-PDS/pds-doi-service/releases/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering


[options]
install_requires =
    appdirs>=1.4
    bs4==0.0.1
    certifi==2020.4.5.1
    chardet==3.0.4
    connexion[swagger-ui] == 2.7.0
    dataclasses==0.7; python_version <= '3.6'
    distlib==0.3.1
    fabric~=2.7.1
    filelock==3.0.12
    Flask==1.1.2
    flask-cors==3.0.9
    idna==2.9
    itsdangerous==2.0.1
    jinja2==3.0.1
    jsonschema==3.0.0
    lxml>=4.5
    nltk==3.5
    numpy>=1.18
    openapi-schema-validator==0.1.4
    openpyxl~=3.0.7
    pandas~=1.4.4
    python-dateutil>=2.8
    python-jose[cryptography]
    pytz==2020.1
    requests>=2.23
    six>=1.14
    soupsieve>=2.0
    urllib3>=1.25
    waitress==2.0.0
    Werkzeug==0.16.0
    wheel
    xlrd>=1.2
    xmlschema==1.5.1
    xmltodict>=0.12
    zipp>=3.1
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >= 3.9
test_suite = pds_doi_service.test.suite


[options.extras_require]
dev =
    build
    black
    wheel
    flake8
    flake8-bugbear
    flake8-docstrings
    pep8-naming
    mypy
    pydocstyle
    coverage
    pytest
    pytest-cov
    pytest-watch
    pytest-xdist
    pre-commit
    sphinx
    sphinxcontrib-napoleon
    tox
    flask_testing==0.8.0
    sphinx-rtd-theme==0.5.0
    sphinx-argparse==0.2.5
    behave==1.2.6
    allure-behave==2.8.13
    behave-testrail-reporter==0.4.0
    pygit2~=1.9.2
    lxml-stubs
    pandas-stubs
    types-flask
    types-jsonschema
    types-pkg_resources
    types-python-dateutil
    types-requests
    types-six
    types-waitress

# 👉 Note: The ``-stubs`` and ``types-`` dependencies above ↑ in the ``dev``
# extra must be duplicated in ``.pre-commit-config.yaml`` in order for ``tox``
# to successfully run ``mypy`` to successfully do the static type linting.
# You can run ``mypy`` standalone just fine. This repetition is unfortunate
# but we don't have a way around it right now 😔


[options.entry_points]
console_scripts =
    pds-doi-cmd=pds_doi_service.core.cmd.pds_doi_cmd:main
    pds-doi-api=pds_doi_service.api.__main__:main
    pds-doi-init=pds_doi_service.core.util.initialize_production_deployment:main


[options.packages.find]
where = src


[options.package_data]
pds.doi_service =
     api/swagger/swagger.yaml
     core/util/conf.default.ini
     core/actions/email_template_header.txt
     core/actions/email_template_body.txt
     core/outputs/datacite/datacite_4.3_schema.json
     core/outputs/datacite/DOI_DataCite_template_20210520-jinja2.json
     core/outputs/osti/DOI_IAD2_template_20210914-jinja2.xml
     core/outputs/osti/DOI_IAD2_template_20210914-jinja2.json
     core/outputs/osti/IAD3_schematron.sch
     core/outputs/osti/iad_schema.xsd


[coverage:run]
# No patterns to omit at this time


[test]

[tool:pytest]
addopts = -n auto --cov=pds

[install]

[flake8]
max-line-length = 120
extend-exclude = docs,tests,setup.py
docstring_convention = google

# Ignoring:
# E203 prevents flake8 from complaining about whitespace around slice
# components. Black formats per PEP8 and flake8 doesn't like some of
# this.
#
# E501 prevents flake8 from complaining line lengths > 79. We will use
# flake8-bugbear's B950 to handle line length lint errors. This trips
# when a line is > max-line-length + 10%.
#
# W503 is ignored for ``pds-doi-service`` not just because it makes use of
# left-aligned binary operators in multi-line expressions, but because the
# opposite advice is now the recommended practice; see
# • https://rhodesmill.org/brandon/slides/2012-11-pyconca/#laying-down-the-law
# • https://github.com/PyCQA/pycodestyle/pull/502
# • https://www.flake8rules.com/rules/W503.html
# • ET Tufte, _Seeing with Fresh Eyes: Meaning, Space, Data, Truth_, Graphics
#   Press 2020, p.14.

#### Errors D100, D101, D102, D103, D104, D107, D200, D202, D205, D212, D402, D403, D415, D417 are temporarily ignored
#    until the codebase has been brought into compliance
#    See #366

#### BEGIN PERMANENT IGNORE
# extend-ignore = E203, E501, W503
#### END PERMANENT IGNORE

#### BEGIN TEMPORARY IGNORE
extend-ignore = E203, E501, W503, B007, B008, B902, B950, D100, D101, D102, D103, D104, D107, D200, D202, D205, D212, D402, D403, D415, D417, E741, F401, F841, N805, N818
#### END TEMPORARY IGNORE

# Selects following test categories:
# D: Docstring errors and warnings
# E, W: PEP8 errors and warnings
# F: PyFlakes codes
# N: PEP8 Naming plugin codes
# B: flake8-bugbear codes
# B***: Specific flake8-bugbear opinionated warnings to trigger
#   B902: Invalid first argument used for method. Use self for instance
#       methods, and cls for class methods
#   B903: Use collections.namedtuple (or typing.NamedTuple) for data classes
#       that only set attributes in an __init__ method, and do nothing else.
#   B950: Line too long. This is a pragmatic equivalent of pycodestyle's
#       E501: it considers "max-line-length" but only triggers when the value
#       has been exceeded by more than 10%.
select = D,E,F,N,W,B,B902,B903,B950

[mypy]
# No patterns to ignore at this time
